# yaoi

./: Cargo.toml  README.md
examples/: listener.rs
src/: capacity.rs  cmaps.rs  dummy.rs  error.rs  lib.rs  macros.rs  strategy.rs  tcp_listener.rs  tcp_pool.rs  tcp_stream.rs
src/capacity/: tcp_listener.rs  tcp_pool.rs
src/tcp_pool/: tcp_client_pool.rs
